Simplify vercel.json configuration
Removed static file handling and build command.

--- a/web 322 assignment 1/vercel.json
+++ b/web 322 assignment 1/vercel.json
@@ -1,12 +1,8 @@
 {
   "builds": [
-    { "src": "server.js", "use": "@vercel/node" },
-    { "src": "public/**/*", "use": "@vercel/static" }
+    { "src": "server.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/css/(.*)", "dest": "/public/css/$1" },
-    { "src": "/images/(.*)", "dest": "/public/images/$1" },
     { "src": "/(.*)", "dest": "server.js" }
-  ],
-  "buildCommand": "npm run tw:build"
+  ]
 }
